# bb_live

./: .gitignore  pyproject.toml  requirements.txt  setup.py
assets/: main.css
bb_live/: __init__.py  live.py
bb_live/templates/: index.html
beesbook-live/templates/: index.html
